maintemplate/server/k8s/envoy-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: maintemplate-envoy-config
data:
  envoy.yaml : |
    admin:
        access_log_path: /tmp/admin_access.log
        address:
        socket_address: { address: 127.0.0.1, port_value: 8090 }
    
    static_resources:
        listeners:
        - name: listener_0
        address:
            socket_address: { address: 0.0.0.0, port_value: 443 }
        filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                name: local_route
                virtual_hosts:
                - name: local_service
                    domains: ["*"]
                    routes:
                    - match: { prefix: "/" }
                    route:
                        cluster: echo_service
                        max_grpc_timeout: 0s
                    cors:
                    allow_origin_string_match:
                    - prefix: "*"
                    allow_methods: GET, PUT, DELETE, POST, OPTIONS
                    allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                    max_age: "1728000"
                    expose_headers: custom-header-1,grpc-status,grpc-message
                http_filters:
                - name: envoy.grpc_web
                - name: envoy.cors
                - name: envoy.router
        clusters:
        - name: echo_service
        connect_timeout: 0.25s
        type: logical_dns
        http2_protocol_options: {}
        lb_policy: round_robin
        hosts: [{ socket_address: { address: "address: grpc-web.default.svc.cluster.local", port_value: 9074 }}]
