maintemplate/server/k8s/envoy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy
spec:
  type: ClusterIP
  selector:
    app: envoy
  ports:
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
