maintemplate/server/k8s/http2-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grpc-web
spec:
  backend:
    serviceName: grpc-web
    servicePort: 9074
